# sphero_rvr_ros

./: LICENSE  README.md  TODO
.devcontainer/: Dockerfile  devcontainer.json
rvr_control/: CMakeLists.txt  package.xml  readme.md
rvr_control/launch/: rvr_driver_py.launch
rvr_control/scripts/: rvr_driver.py
rvr_ros/: CMakeLists.txt  package.xml
sphero_rvr_algorithms/: CMakeLists.txt  package.xml
sphero_rvr_algorithms/launch/: ball_maze.launch  fake_light.launch  fake_light_follower.launch
sphero_rvr_algorithms/scripts/: fake_publish_ground_colour.py  fake_publish_illuminance.py  follow_light.py  static_light_source_tf.py
sphero_rvr_algorithms/worlds/: ball_maze.world  obstacles.world
sphero_rvr_bringup/: CMakeLists.txt  package.xml  readme.md
sphero_rvr_bringup/launch/: move_base_bringup.launch  sphero_rvr_bringup.launch
sphero_rvr_control/: CMakeLists.txt  package.xml  readme.md
sphero_rvr_control/config/: control.yaml
sphero_rvr_control/launch/: sphero_rvr_control.launch
sphero_rvr_controllers/: CMakeLists.txt  package.xml  readme.md
sphero_rvr_controllers/config/: controllers.yaml  diff_drive_marker.yaml  joy_config.yaml  twist_mux.yaml
sphero_rvr_controllers/launch/: diff_drive_marker.launch  sphero_rvr_controllers.launch
sphero_rvr_description/: CMakeLists.txt  README.md  package.xml
sphero_rvr_description/launch/: display.launch  robot.launch  state_publisher.launch  urdf_preview.launch
sphero_rvr_description/meshes/: body.dae
sphero_rvr_description/rviz/: urdf.rviz
sphero_rvr_description/urdf/: body.urdf.xacro  geometry.urdf.xacro  materials.urdf.xacro  sphero_rvr.urdf.xacro  track.urdf.xacro  track_robot.urdf.xacro  wheel.urdf.xacro
sphero_rvr_desktop/: CMakeLists.txt  package.xml  readme.md
sphero_rvr_desktop/launch/: display.launch  urdf_preview.launch
sphero_rvr_desktop/rviz/: urdf.rviz
sphero_rvr_driver/: CMakeLists.txt  package.xml  readme.md  requirements.txt
sphero_rvr_driver/launch/: fleet_logger.launch  rvr_autokit.launch  sphero_rvr_driver_py.launch
sphero_rvr_driver/scripts/: check_rvr_firmware.py  mqtt_fleet_logger.py  rvr_driver.py  sparkfun_autokit_driver.py
sphero_rvr_gazebo/: CMakeLists.txt  package.xml  readme.md
sphero_rvr_gazebo/launch/: sphero_rvr_gazebo.launch  sphero_rvr_obstacles.launch
sphero_rvr_navigation/: CMakeLists.txt  package.xml  readme.md
sphero_rvr_navigation/config/: costmap_common.yaml  costmap_global.yaml  costmap_local.yaml  gmapping.yaml  localisation.yaml  move_base_flex.yaml  online_async.yaml  planners.yaml
sphero_rvr_navigation/launch/: gmapping.launch  localisation.launch  move_base.launch  move_base_flex.launch  rvr_navigation.launch  slam_toolbox.launch  sphero_rvr_navigation.launch
sphero_rvr_ros/: CMakeLists.txt  package.xml
