<?xml version="1.0"?>
<package format="2">
  <name>rvr_control</name>
  <version>0.0.1</version>
  <description>The rvr_control package</description>

  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>tf_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>

  <export>
  </export>
</package>
