<?xml version="1.0"?>
<package format="2">
  <name>rvr_ros</name>
  <version>0.1.0</version>
  <description>The rvr_ros metapackage</description>

  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rvr_control</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
</package>
