<?xml version="1.0"?>
<package format="2">
  <name>sphero_rvr_controllers</name>
  <version>0.0.0</version>
  <description>The sphero_rvr_controllers package</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>
  <depend>interactive_marker_twist_server</depend>
</package>
