<?xml version="1.0"?>
<package format="2">
  <name>sphero_rvr_description</name>
  <version>0.0.0</version>
  <description>The sphero_rvr_description package</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>BSD</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>xacro</depend>
</package>
