<?xml version="1.0"?>
<package format="2">
  <name>sphero_rvr_desktop</name>
  <version>0.0.0</version>
  <description>The sphero_rvr_desktop package</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>rviz</exec_depend>
</package>
