<?xml version="1.0"?>
<package format="2">
  <name>sphero_rvr_gazebo</name>
  <version>0.0.1</version>
  <description>sphero rvr gazebo simulation</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sphero_rvr_description</depend>
  <depend>sphero_rvr_control</depend>
  <depend>sphero_rvr_controllers</depend>

  <exec_depend>controller_manager</exec_depend>
  <exec_depend>gazebo_plugins</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>

  <exec_depend>hector_gazebo_plugins</exec_depend>
</package>
