<?xml version="1.0"?>
<package format="2">
  <name>sphero_rvr_navigation</name>
  <version>0.0.0</version>
  <description>The sphero_rvr_navigation package</description>

  <maintainer email="mik-p@github.com">mik p</maintainer>

  <license>MIT</license>

  <author email="mik-p@github.com">mik p</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>sphero_rvr_control</depend>
  <depend>sphero_rvr_controllers</depend>
  <depend>urg_node</depend>
  <depend>move_base</depend>
  <depend>slam_gmapping</depend>
</package>
