<?xml version="1.0"?>
<package format="2">
  <name>sphero_rvr_ros</name>
  <version>0.1.0</version>
  <description>The sphero_rvr_ros metapackage</description>

  <maintainer email="mppritchard3@hotmail.com">mik-p</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>sphero_rvr_driver</exec_depend>
  <exec_depend>sphero_rvr_description</exec_depend>
  <exec_depend>sphero_rvr_control</exec_depend>
  <exec_depend>sphero_rvr_controllers</exec_depend>
  <exec_depend>sphero_rvr_bringup</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <metapackage />
  </export>
</package>
